[package]
name = "minelaunch"
version = "0.3.2"
authors = ["Robert Fuchs <robertfuchsyoshi@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
reqwest = "0.11"
bytes = "1.0"
tempfile = "3.0.7"
tar = "0.4"
walkdir = "2.2.7"
sha1 = { version = "0.6", features = ["std"] }
regex = "1.4"
zip = "0.5"
lazy_static  = "1.4.0"
iced = { version = "0.3", features = ["async-std"] }
async-std = { version = "1.9", features = ["unstable", "attributes", "tokio1"] }
futures = "0.3"

